--- a/src/ui-kit/styles/components/atoms/_titles.css
+++ b/src/ui-kit/styles/components/atoms/_titles.css
@@ -10,6 +10,11 @@ h6 {
   font-family: var(--font-secondary), sans-serif;
   overflow-wrap: break-word;
 
+  span,
+  small {
+    font-family: var(--font-secondary), sans-serif;
+  }
+
   a {
     text-decoration: none;
   }
